[package]
name = "edgelb"
version = "0.1.0"
authors = ["cmiceli"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
serde = "1.0.167"
url = "2.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
regex = "1.9.1"
rand = "0.8.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
